[package]
name = "proof_running_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }
basic_bootloader = { path = "../basic_bootloader", default-features = false }
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
cfg-if = "*"
cc-traits = { version = "*", default-features = false }
seq-macro = { version = "*", default-features = false }
talc = { version = "*", default-features = false, features = ["allocator", "nightly_api"]}
lock_api = "0.4.11"
# talc = { path = "../../talc", default-features = false, features = ["allocator", "nightly_api"]}

[dev-dependencies]
hex = "*"
fastrand = "2.0.2"

[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "basic_system/testing", "basic_bootloader/testing"]
default = ["testing"]
proving = ["crypto/proving", "basic_system/proving"]
scalloc = []
cycle_marker = ["zk_ee/cycle_marker", "evm_interpreter/cycle_marker", "basic_system/cycle_marker", "basic_bootloader/cycle_marker"]
unlimited_native = ["basic_bootloader/unlimited_native"]
benchmarking = ["cycle_marker"]
global-alloc = []
error_origins = ["zk_ee/error_origins"]
multiblock-batch = ["basic_system/multiblock-batch"]
state-diffs-pi = ["basic_system/state-diffs-pi"]
aggregation = ["basic_system/aggregation"]
evm_compatibility = ["basic_bootloader/evm-compatibility", "basic_system/evm-compatibility"]

# A feature for every specific use case

# Features used for tests.
for_tests = ["evm_compatibility", "system_hooks/p256_precompile", "state-diffs-pi", "cycle_marker", "system_hooks/point_eval_precompile"]

# Features used for eth_runner
eth_runner = ["evm_compatibility", "basic_bootloader/disable_system_contracts", "zk_ee/prevrandao", "state-diffs-pi", "unlimited_native"]

# Features used for evm_tester
evm_tester = ["evm_compatibility", "basic_bootloader/resources_for_tester", "basic_bootloader/disable_system_contracts", "zk_ee/prevrandao", "state-diffs-pi", "basic_bootloader/pectra", "system_hooks/p256_precompile","system_hooks/point_eval_precompile"]

# Features used for pectra tests
pectra = ["evm_compatibility", "basic_bootloader/pectra", "state-diffs-pi"]

