[package]
name = "storage_models"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }

[features]
testing = ["zk_ee/testing"]
delegation = ["zk_ee/delegation"]
