[package]
name = "system_hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
cycle_marker = { path = "../cycle_marker" }

arrayvec = { version = "0.7.4", default-features = false }
strum_macros = "0.27.1"
paste = "1.0.15"

[features]
point_eval_precompile = []
mock-unsupported-precompiles = []
p256_precompile = []
cycle_marker = ["cycle_marker/log_to_file"]
