[package]
name = "system_hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
cycle_marker = { path = "../cycle_marker" }
crypto = { path = "../crypto", default-features = false }

ruint = { workspace = true, default-features = false  }
arrayvec = { workspace = true, default-features = false }

strum_macros = "0.27.1"
paste = "1.0.15"

[features]
default = ["p256_precompile"]
mock-unsupported-precompiles = []
p256_precompile = []
cycle_marker = ["cycle_marker/log_to_file"]
