[package]
name = "system_hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
ruint = { workspace = true, default-features = false }
arrayvec = { workspace = true, default-features = false }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
cycle_marker = { path = "../cycle_marker" }

strum_macros = { workspace = true }
paste = { workspace = true }

[features]
point_eval_precompile = ["evm_interpreter/point_eval_precompile"]
mock-unsupported-precompiles = ["evm_interpreter/mock-unsupported-precompiles"]
p256_precompile = ["evm_interpreter/p256_precompile"]
cycle_marker = ["cycle_marker/log_to_file"]
