[package]
name = "zk_ee"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruint = { workspace = true, default-features = false }
arrayvec = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true  }

cfg-if = "*"
crypto = { path = "../crypto", default-features = false }
bitflags = { version = "2.6.0", default-features = false }
cycle_marker = { path = "../cycle_marker" }
strum_macros = "0.27.1"
paste = "1.0.15"

[features]
# serde derivation has to be disabled for risc-v target until we update ruint version
serde = ["dep:serde", "ruint/serde"]
testing = ["serde"]
default = ["serde", "error_origins", "detailed_errors"]
cycle_marker = ["cycle_marker/log_to_file"]
global-alloc = []
# Adds location (file, line number) where an error is raised
error_origins = []
detailed_errors = []
prevrandao = []

[dev-dependencies]
