[package]
name = "zk_ip"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-airbender/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[dependencies]
zksync_os_runner = { path = "../zksync_os_runner" }
risc_v_simulator = { workspace = true, features = ["delegation"] }

[profile.release]
lto = true
