[package]
name = "zksync_os"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r0 = "1.0.0"
riscv = "0.11"
heapless = { version = "*", default-features = false }
proof_running_system = { path = "../proof_running_system", default-features = false}
crypto = { path = "../crypto", optional = true }
riscv_common = {git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.4.3", features = ["custom_panic", "custom_allocator"]}
#riscv_common = {path = "../../zksync-airbender/riscv_common" , features = ["custom_panic", "custom_allocator"]}
# zerocopy 0.8.29 introduced a compilation issue, remove this
# when the compilation issue is resolved
zerocopy = { version = "=0.8.28" }

[profile.dev]
opt-level = 0
lto = false
codegen-units = 1
panic = "abort"
debug = true

[profile.dev.overrides."*"]
opt-level = 0
lto = false
codegen-units = 1
panic = "abort"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.release.overrides."*"]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[features]
scalloc = ["proof_running_system/scalloc"]
no_exception_handling = []
print_debug_info = ["proof_running_system/global-alloc", "proof_running_system/error_origins"]
proving = ["crypto/proving", "proof_running_system/proving"]
benchmarking = ["proof_running_system/benchmarking"]
production = ["proof_running_system/production"]
for_tests = ["proof_running_system/for_tests"]
eth_runner = ["proof_running_system/eth_runner"]
evm_tester = ["proof_running_system/evm_tester"]
multiblock-batch = ["proof_running_system/multiblock-batch"]
state-diffs-pi = ["proof_running_system/state-diffs-pi"]
aggregation = ["proof_running_system/aggregation"]


# [patch."https://github.com/matter-labs/zksync-airbender"]
# blake2s_u32 = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile" }
