[package]
name = "zksync_os_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", features = ["delegation"] }
riscv_transpiler = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev" }
prover_examples = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", optional = true }
trace_and_split = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", optional = true }
execution_utils = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", optional = true }
cycle_marker = { path = "../cycle_marker" }

[features]
prover = ["prover_examples", "trace_and_split", "execution_utils"]
opcode_stats = ["risc_v_simulator/opcode_stats"]
cycle_marker = ["risc_v_simulator/cycle_marker", "cycle_marker/use_risc_v_simulator"]
