[package]
name = "zksync_os_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
risc_v_simulator = { workspace = true, features = ["delegation"] }
execution_utils = { workspace = true }
prover_examples = { workspace = true }
cycle_marker = { path = "../supporting_crates/cycle_marker" }

[features]
opcode_stats = ["risc_v_simulator/opcode_stats"]
cycle_marker = ["risc_v_simulator/cycle_marker", "cycle_marker/use_risc_v_simulator"]
