[package]
name = "zksync_os_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
riscv_transpiler = { workspace = true }
execution_utils = { workspace = true }
prover_examples = { workspace = true }
common_constants = { workspace = true }
cycle_marker = { path = "../cycle_marker" }

[features]
flamegraph = ["riscv_transpiler/flamegraph"]
cycle_marker = ["cycle_marker/use_riscv_transpiler"]
