[package]
name = "zksync_os_experiment_2"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-airbender/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[dependencies]
risc_v_simulator = { package = "risc_v_simulator", git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.4.3"}
zksync_os_experiments_utils = { path="../utils" }

[profile.release]
lto = true

[workspace]