[package]
name = "modexp"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
hex = { workspace = true }
num-bigint = { workspace = true, default-features = true }
num-integer = { workspace = true, default-features = true }

[features]
