[package]
name = "u256"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ruint = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
delegated_u256 = { path = "../delegated_u256" }

[features]
serde = ["ruint/serde", "delegated_u256/serde"]
delegation = []

[dev-dependencies]
proptest = "1.7.0"
