[package]
name = "zksync_os_tests_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { version = "1", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }
ruint = { workspace = true, default-features = false }

zksync_os_interface = { workspace = true, default-features = false }
