[package]
name = "evm-tester"
version = "0.1.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Testing framework for EVM EE"

[[bin]]
name = "evm-tester"
path = "src/evm_tester/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "=0.3.26", default-features = false }
anyhow = "=1.0.89"
which = "=6.0.3"
colored = "=2.1.0"

serde = { version = "=1.0.210", features = ["derive"] }
serde_json = { version = "=1.0.128", features = ["arbitrary_precision"] }
serde_yaml = "=0.9.34"
serde_yml = "0.0.12"
yaml-rust2 = "*"
num-bigint = { version = "0.4", features = ["serde"] }
md5 = "=0.7.0"
hex = "=0.4.3"
sha3 = "=0.10.8"
ron = "=0.8.1"
rlp = "=0.5.2"
regex = "=1.11.0"
glob = "=0.3.1"
semver = { version = "=1.0.23", features = ["serde"] }
itertools = "=0.13.0"
once_cell = "*"
rayon = "=1.10.0"
lazy_static = "=1.5.0"
bincode = "=1.3.3"
parity-scale-codec-derive = "=3.6.12"

ruint = { version = "1.16", default-features = false, features = ["primitive-types"] }
alloy = { version = "1", features = ["full", "consensus", "eip712"]}

zksync_os_forward_system = {package = "forward_system", path = "../../forward_system" }
zk_ee = { package = "zk_ee", path = "../../zk_ee" }
zksync_os_evm_interpreter = { package = "evm_interpreter", path = "../../evm_interpreter" }
zksync_os_basic_system = { package = "basic_system", path = "../../basic_system", features = ["evm-compatibility"] }
zksync_os_basic_bootloader = { package = "basic_bootloader", path = "../../basic_bootloader", features = ["evm-compatibility", "resources_for_tester"] }
zksync_os_system_hooks = { package = "system_hooks", path = "../../system_hooks"}
zksync_os_oracle_provider = {package = "oracle_provider", path = "../../oracle_provider"}
zksync_os_runner = {package = "zksync_os_runner", path = "../../zksync_os_runner" }
zksync_os_crypto = { package = "crypto", path="../../crypto" }
zksync_os_rig = { package = "rig", path="../../tests/rig", features = ["pectra"]}

risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev" }

[dependencies.web3]
version = "=0.19.0"
default-features = false
features = ["http-rustls-tls", "test", "signing"]

[dependencies.reqwest]
version = "=0.11.27"
default-features = false
features = ["blocking"]

[features]
default = ["pectra", "zksync_os_forward_system/no_print"]
pectra = ["zksync_os_forward_system/pectra"]

