[package]
name = "evm-tester"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[[bin]]
name = "evm-tester"
path = "src/evm_tester/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "=0.3.26", default-features = false }
anyhow = "=1.0.89"
colored = "=2.1.0"

serde = { version = "=1.0", features = ["derive"] }
serde_json = { version = "=1.0", features = ["arbitrary_precision"] }
serde_yaml = "=0.9.34"
md5 = "=0.7.0"
hex = "=0.4.3"
regex = "=1.11.0"
itertools = "=0.13.0"
rayon = "=1.11.0"
lazy_static = "=1.5.0"

ruint = {version = "=1.16", features = ["primitive-types"]}
alloy = { version = "=1.0.31", features = ["full", "eip712", "consensus"]}

zksync_os_forward_system = {package = "forward_system", path = "../../forward_system" }
zk_ee = { package = "zk_ee", path = "../../zk_ee" }
zksync_os_basic_bootloader = { package = "basic_bootloader", path = "../../basic_bootloader" }
zksync_os_rig = { package = "rig", path="../../tests/rig", features = ["evm_tester"]}


[dependencies.web3]
version = "=0.19.0"
default-features = false
features = ["http-rustls-tls", "test", "signing"]

